# Incident-Response-Chronicles

./: Cargo.toml  LICENSE  README.md
scenarios/: ransomware_outbreak.json
src/: lib.rs  main.rs
src/data/: evidence.rs  mod.rs  player.rs  systems.rs  threats.rs  timeline.rs
src/game/: investigation.rs  mod.rs  narrative.rs  scenario.rs
src/tui/: app.rs  mod.rs  widgets.rs
