[package]
name = "incident_response"
version = "0.1.0"
edition = "2021"
authors = ["Cipher (AI)", "Ryan (depicide)"]
description = "A cybersecurity text adventure game - investigate incidents, analyze threats, save the company"
license = "MIT"
keywords = ["game", "security", "text-adventure", "incident-response", "tui"]
categories = ["games", "command-line-utilities"]

[dependencies]
# TUI Framework
ratatui = "0.28"
crossterm = "0.28"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Utilities
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging (for debug mode)
log = "0.4"
env_logger = "0.11"

# For colorful terminal output
colored = "2.0"

[profile.release]
opt-level = 3
lto = true
strip = true
